# raspberry-pi

./: .gitignore  LICENSE  LICENSE.md  README.md  headless_configure.sh  install.sh
neovim/: init.vim  install.sh
os/: download.sh
rust/: rust_install.sh
setup/: headless_configure.sh  install.sh
setup/bluetooth/: btserial.sh  configure.sh
setup/neovim/: init.vim  install.sh
setup/os/: download.sh
setup/rust/: install.sh
setup/terminal/: install.sh  profile
setup/terminal/bash/: bash_aliases  bash_profile  bashrc
setup/terminal/zsh/: zshrc
setup/tmux/: install.sh
setup/vim/: install.sh  vimrc
setup/wifi/: configure.sh  wifi_setup.sh
ss/ss-client/: Cargo.toml  README.md  ss-client.service
ss/ss-client/src/: aws-iot-update-shadow.py  error.rs  main.rs
ss/ss-client/src/data/: mod.rs  wifi.rs
ss/ss-client/src/sensors/: mod.rs
ss/ss-server/: index.html  package.json
ss/ss-server/certificates/: README.md
ss/ss-server/data/: faker.json  uptime.json
ss/ss-server/example/: b8:27:eb:80:56:66_2018-12-23T12:02:03.json
ss/ss-server/src/components/: Hello.tsx  dataConverter.js  renderer.js
terminal/: install.sh
terminal/zsh/: zgen_install.sh  zshrc
tmux/: install.sh
vim/: install.sh  vimrc
wifi/: wifi_setup.sh
