[package]
name = "ss-client"
version = "0.1.0"
authors = ["dymayday <dymayday@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
wifiscanner = { git = "https://github.com/dymayday/wifiscanner.git", version = "0.4.*" }
walkdir = "2"
# dirs = "1.0.4"
# Here we have all our logging capability
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog-scope = "4.0.1"
# Here we have all our serialization capability
bincode = "1.0.1"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
# MQTT protocol handler. Handled by Python SDK for now but this one definatly looks promising.
# rusoto_core = { version="0.36.0", default_features=false, features=["rustls"] }
# rusoto_iot = { version="0.36.0", default_features=false, features=["rustls"] }
# rusoto_iot_data = { version="0.36.0", default_features=false, features=["rustls"] }
